--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,15 +2,13 @@
   <div class="navbar-inner">
     <div class="container">
 
-      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
 
-      <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="#">Dribbble Demo</a>
+      <%= link_to "Dribbble Demo", root_path, class: "brand" %>
 
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
@@ -19,7 +17,12 @@
           <li><%= link_to "About", about_path %></li>
         </ul>
         <ul class="nav pull-right">
-          <li><%= link_to "Login", '#' %></li>
+          <% if user_signed_in? %>
+            <li><%= link_to "Edit Profile",  edit_user_registration_path %></li>
+            <li><%= link_to "Logout",  destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Login",  new_user_session_path %></li>
+          <% end %>
         </ul>
       </div>
 
