--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,5 @@
   <p>You've found the home page for the
     <%= link_to "Dribble Demo Project", "http://www.dribbble.com" %>
    by <%= link_to "Miguel Solorio", "http://www.miguelsolorio.com" %>.</p>
-  <p><%= link_to "Sign Up Now!", "#", class: 'btn btn-primary btn-large' %></p>
+  <p><%= link_to "Sign Up Now!", new_user_registration_path, class: 'btn btn-primary btn-large' %></p>
 </div>
