--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
         <ul class="nav">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Shots", shots_path %></li>
         </ul>
         <ul class="nav pull-right">
           <% if user_signed_in? %>
