--- a/app/views/shots/_shot.html.erb
+++ b/app/views/shots/_shot.html.erb
@@ -1,6 +1,8 @@
 <tr>
   <td><%= shot.description %></td>
   <td><%= link_to 'View', shot %></td>
+  <% if current_user == shot.user %>
   <td><%= link_to 'Edit', edit_shot_path(shot) %></td>
   <td><%= link_to 'Delete', shot, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% end %>
 </tr>
