--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,9 +1,9 @@
-$baseFontFamily: Montserrat;
+// $baseFontFamily: Montserrat;
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
 $btnPrimaryBackground: teal;
 
-@import url(http://fonts.googleapis.com/css?family=Montserrat);
+// @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import 'bootstrap';
 
 body{
@@ -26,4 +26,26 @@ body{
   a {
     color: $gray;
   }
+}
+
+/* Required for jQuery Masonry */
+.box{
+  margin: 5px;
+  padding: 5px;
+  font-size: 11px;
+  line-height: 1.4em;
+  float: left;
+  @include border-radius(5px);
+  @include box-shadow(1px 1px 10px #444);
+  width: 214px;
+
+  img{
+    display: block;
+    width: 100%;
+    @include border-radius(5px);
+  }
+}
+
+.description{
+  margin: 10px 0 5px;
 }
