--- a/app/views/shots/_shot.html.erb
+++ b/app/views/shots/_shot.html.erb
@@ -1,9 +1,9 @@
-<tr>
-  <td><%= link_to image_tag(shot.image(:thumb)), shot %></td>
-  <td><%= shot.description %></td>
-  <td><%= link_to 'View', shot %></td>
-  <% if current_user == shot.user %>
-    <td><%= link_to 'Edit', edit_shot_path(shot) %></td>
-    <td><%= link_to 'Delete', shot, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  <% end %>
-</tr>
+<div class="box">
+  <%= link_to image_tag(shot.image(:medium)), shot %>
+  <p class="description"><%= shot.description %></p>
+  <p><strong>Posted by <%= shot.user.name %></strong></p>
+  <p><% if current_user == shot.user %>
+    <%= link_to 'Edit', edit_shot_path(shot) %> |
+    <%= link_to 'Delete', shot, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %></p>
+</div>
