--- a/app/views/shots/index.html.erb
+++ b/app/views/shots/index.html.erb
@@ -1,20 +1,3 @@
-<h1>Listing shots</h1>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <%= render @shots %>
-  </tbody>
-
-</table>
-
-<%= link_to 'New Shot', new_shot_path %>
+<div id="shots">
+  <%= render @shots %>
+</div>
